[package]
name = "leptips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floater = { path = "../floater", features = ["web-utils"] }
leptos = "0.6"
leptos-use = "0.10"

[dependencies.web-sys]
version = "0.3"
features = ["DomRect", "CssStyleDeclaration", "HtmlElement", "Element"]

[workspace]
members = ["examples/*"]
